# http-load-balancer

./: .dockerignore  .env.example  Makefile  README.md  compose.yaml  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: build.yml  ci.yml
k8s/: deployment.yml  service.yml
k8s/http_load_balancer/: deployment.yaml
k8s/http_target_discovery/: deployment.yaml
k8s/sample_app/: deployment.yaml  hpa.yaml
kind/: setup.sh
scripts/: hammer_load_balancer.py  test_algorithms.py
src/http_load_balancer_from_scratch/: main.py  settings.py
src/http_load_balancer_from_scratch/algorithms/: __init__.py  base_algorithm.py  ip_hash_algorithm.py  least_connections_algorithm.py  least_response_time_algorithm.py  round_robin_algorithm.py  sticky_round_robin_algorithm.py  weighted_round_robin_algorithm.py
src/http_load_balancer_from_scratch/algorithms/dynamic/: least_connections_algorithm.py  least_response_time_algorithm.py
src/http_load_balancer_from_scratch/algorithms/static/: ip_hash_algorithm.py  round_robin_algorithm.py  sticky_round_robin_algorithm.py  weighted_round_robin_algorithm.py
src/http_load_balancer_from_scratch/core/: __init__.py  kubernetes_client.py  kubernetes_manager.py  target_manager.py
src/http_load_balancer_from_scratch/enums/: __init__.py  algorithm_strategy.py
src/http_load_balancer_from_scratch/schemas/: route_schema.py  target_schema.py
